--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,4 @@ pdf2image==1.16.3
 groq==0.5.0
 networkx==3.1
 spacy==3.7.2
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0.tar.gz
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl
