--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
-streamlit==1.28.0
-neo4j==5.14.0
-PyPDF2==3.0.1
-pytesseract==0.3.10
-Pillow==10.0.1
-pdf2image==1.16.3
-groq==0.5.0
+streamlit==1.39.0
+pandas==2.2.3
+numpy==1.26.4
+PyMuPDF==1.24.7
+pdfplumber==0.11.0
+pytesseract==0.3.13
+Pillow==10.4.0
+langchain==0.3.4
+faiss-cpu==1.8.0
+sentence-transformers==3.1.1
+neo4j==5.23.1
+spacy==3.7.4
+groq==0.11.0
+python-dotenv==1.0.1
+requests==2.32.3
+tqdm==4.66.5
