--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-streamlit==1.39.0
-pandas==2.2.3
-numpy==1.26.4
-PyMuPDF==1.24.7
-pdfplumber==0.11.0
-pytesseract==0.3.13
-Pillow==10.4.0
-langchain==0.3.4
-faiss-cpu==1.8.0
-sentence-transformers==3.1.1
-neo4j==5.23.1
-spacy==3.7.4
-groq==0.11.0
-python-dotenv==1.0.1
-requests==2.32.3
-tqdm==4.66.5
+streamlit>=1.28.0
+PyPDF2>=3.0.0
+sentence-transformers>=2.2.0
+faiss-cpu>=1.7.0
+numpy>=1.21.0
+pytesseract>=0.3.10
+pdf2image>=1.16.3
+Pillow>=10.0.0
+gtts>=2.3.2
+groq>=0.3.0
+SpeechRecognition>=3.10.0
+pydub>=0.25.1
+soundfile>=0.12.1
+neo4j>=5.14.0
+spacy>=3.7.0
+networkx>=3.0
