--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,9 @@
-streamlit>=1.28.0
-PyPDF2>=3.0.0
-sentence-transformers>=2.2.0
-faiss-cpu>=1.7.0
-numpy>=1.21.0
-pytesseract>=0.3.10
-pdf2image>=1.16.3
-Pillow>=10.0.0
-gtts>=2.3.2
-groq>=0.3.0
-SpeechRecognition>=3.10.0
-pydub>=0.25.1
-soundfile>=0.12.1
-neo4j>=5.14.0
-spacy>=3.7.0
-networkx>=3.0
+streamlit==1.28.2
+neo4j==5.14.0
+PyPDF2==3.0.1
+pytesseract==0.3.10
+Pillow==9.5.0
+pdf2image==1.16.3
+groq==0.5.0
+gtts==2.3.2
+SpeechRecognition==3.10.0
