--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-streamlit==1.28.2
-neo4j==5.14.0
-PyPDF2==3.0.1
-pytesseract==0.3.10
-Pillow==9.5.0
-pdf2image==1.16.3
-groq==0.5.0
-gtts==2.3.2
-SpeechRecognition==3.10.0
+streamlit>=1.28.0
+neo4j>=5.14.0
+PyPDF2>=3.0.0
+pytesseract>=0.3.10
+Pillow>=10.0.0
+pdf2image>=1.16.3
+groq>=0.5.0
+gtts>=2.3.2
+SpeechRecognition>=3.10.0
+pydub>=0.25.1
